--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ repository = "https://www.github.com/hwchase17/langchain"
 langchain-server = "langchain.server:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
+python = "^3.7.1,<3.11"
 pydantic = "^1"
 SQLAlchemy = "^1"
 requests = "^2"
@@ -23,20 +23,19 @@ wikipedia = {version = "^1", optional = true}
 elasticsearch = {version = "^8", optional = true}
 opensearch-py = {version = "^2.0.0", optional = true}
 redis = {version = "^4", optional = true}
-manifest-ml = {version = "^0.0.1", optional = true}
+# manifest-ml = {version = "^0.0.1", optional = true}
 spacy = {version = "^3", optional = true}
 nltk = {version = "^3", optional = true}
 transformers = {version = "^4", optional = true}
 beautifulsoup4 = {version = "^4", optional = true}
 torch = {version = "^1", optional = true}
 jinja2 = {version = "^3", optional = true}
-tiktoken = {version = "^0.3.2", optional = true, python="^3.9"}
-pinecone-client = {version = "^2", optional = true}
-pinecone-text = {version = "^0.4.2", optional = true}
+# tiktoken = {version = "^0.3.2", optional = true, python="^3.9"}
+# pinecone-client = {version = "^2", optional = true}
+# pinecone-text = {version = "^0.4.2", optional = true}
 weaviate-client = {version = "^3", optional = true}
 google-api-python-client = {version = "2.70.0", optional = true}
 wolframalpha = {version = "5.0.0", optional = true}
-anthropic = {version = "^0.2.4", optional = true}
 qdrant-client = {version = "^1.1.2", optional = true, python = ">=3.8.1,<3.12"}
 dataclasses-json = "^0.5.7"
 tensorflow-text = {version = "^2.11.0", optional = true, python = "^3.10, <3.12"}
@@ -94,15 +93,14 @@ wrapt = "^1.15.0"
 openai = "^0.27.4"
 elasticsearch = {extras = ["async"], version = "^8.6.2"}
 redis = "^4.5.4"
-pinecone-client = "^2.2.1"
-pinecone-text = "^0.4.2"
+# pinecone-client = "^2.2.1"
+# pinecone-text = "^0.4.2"
 pgvector = "^0.1.6"
 transformers = "^4.27.4"
-pandas = "^2.0.0"
 deeplake = "^3.2.21"
 torch = "^1.0.0"
 chromadb = "^0.3.21"
-tiktoken = "^0.3.3"
+# tiktoken = "^0.3.3"
 
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.0.249"
