--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ langchain-server = "langchain.server:main"
 langchain = "langchain.cli.main:main"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
+python = "^3.7.1,<3.11"
 pydantic = "^1"
 SQLAlchemy = ">=1.4,<3"
 requests = "^2"
@@ -26,21 +26,21 @@ wikipedia = {version = "^1", optional = true}
 elasticsearch = {version = "^8", optional = true}
 opensearch-py = {version = "^2.0.0", optional = true}
 redis = {version = "^4", optional = true}
-manifest-ml = {version = "^0.0.1", optional = true}
+# manifest-ml = {version = "^0.0.1", optional = true}
 spacy = {version = "^3", optional = true}
 nltk = {version = "^3", optional = true}
 transformers = {version = "^4", optional = true}
 beautifulsoup4 = {version = "^4", optional = true}
 torch = {version = ">=1,<3", optional = true}
 jinja2 = {version = "^3", optional = true}
-tiktoken = {version = "^0.3.2", optional = true, python="^3.9"}
-pinecone-client = {version = "^2", optional = true}
-pinecone-text = {version = "^0.4.2", optional = true}
+# tiktoken = {version = "^0.3.2", optional = true, python="^3.9"}
+# pinecone-client = {version = "^2", optional = true}
+# pinecone-text = {version = "^0.4.2", optional = true}
 clickhouse-connect = {version="^0.5.14", optional=true}
 weaviate-client = {version = "^3", optional = true}
 google-api-python-client = {version = "2.70.0", optional = true}
 wolframalpha = {version = "5.0.0", optional = true}
-anthropic = {version = "^0.2.6", optional = true}
+# anthropic = {version = "^0.2.6", optional = true}
 qdrant-client = {version = "^1.1.2", optional = true, python = ">=3.8.1,<3.12"}
 dataclasses-json = "^0.5.7"
 tensorflow-text = {version = "^2.11.0", optional = true, python = "^3.10, <3.12"}
@@ -64,7 +64,7 @@ psycopg2-binary = {version = "^2.9.5", optional = true}
 pyowm = {version = "^3.3.0", optional = true}
 async-timeout = {version = "^4.0.0", python = "<3.11"}
 azure-identity = {version = "^1.12.0", optional=true}
-gptcache = {version = ">=0.1.7", optional = true}
+# gptcache = {version = ">=0.1.7", optional = true}
 atlassian-python-api = {version = "^3.36.0", optional=true}
 pytesseract = {version = "^0.3.10", optional=true}
 html2text = {version="^2020.1.16", optional=true}
@@ -72,28 +72,28 @@ numexpr = "^2.8.4"
 duckduckgo-search = {version="^2.8.6", optional=true}
 azure-cosmos = {version="^4.4.0b1", optional=true}
 lark = {version="^1.1.5", optional=true}
-lancedb = {version = "^0.1", optional = true}
+# lancedb = {version = "^0.1", optional = true}
 pexpect = {version = "^4.8.0", optional = true}
 pyvespa = {version = "^0.33.0", optional = true}
 O365 = {version = "^2.0.26", optional = true}
 jq = {version = "^1.4.1", optional = true}
-steamship = {version = "^2.16.9", optional = true}
+steamship = {version = "*", optional = true}
 pdfminer-six = {version = "^20221105", optional = true}
 docarray = {version="^0.32.0", extras=["hnswlib"], optional=true}
 lxml = {version = "^4.9.2", optional = true}
 pymupdf = {version = "^1.22.3", optional = true}
 pypdfium2 = {version = "^4.10.0", optional = true}
 gql = {version = "^3.4.1", optional = true}
-pandas = {version = "^2.0.1", optional = true}
+pandas = {version = "*", optional = true}
 telethon = {version = "^1.28.5", optional = true}
 neo4j = {version = "^5.8.1", optional = true}
 psychicapi = {version = "^0.2", optional = true}
-zep-python = {version="^0.25", optional=true}
-langkit = {version = ">=0.0.1.dev3, <0.1.0", optional = true}
+# zep-python = {version="^0.25", optional=true}
+# langkit = {version = ">=0.0.1.dev3, <0.1.0", optional = true}
 chardet = {version="^5.1.0", optional=true}
 requests-toolbelt = {version = "^1.0.0", optional = true}
-openlm = {version = "^0.0.5", optional = true}
-scikit-learn = {version = "^1.2.2", optional = true}
+# openlm = {version = "*", optional = true}
+scikit-learn = {version = "*", optional = true}
 azure-ai-formrecognizer = {version = "^3.2.1", optional = true}
 azure-ai-vision = {version = "^0.11.1b1", optional = true}
 azure-cognitiveservices-speech = {version = "^1.28.0", optional = true}
@@ -139,20 +139,18 @@ wrapt = "^1.15.0"
 openai = "^0.27.4"
 elasticsearch = {extras = ["async"], version = "^8.6.2"}
 redis = "^4.5.4"
-pinecone-client = "^2.2.1"
-pinecone-text = "^0.4.2"
-clickhouse-connect = "^0.5.14"
+# pinecone-client = "^2.2.1"
+# pinecone-text = "^0.4.2"
 pgvector = "^0.1.6"
 transformers = "^4.27.4"
-pandas = "^2.0.0"
 deeplake = "^3.2.21"
 weaviate-client = "^3.15.5"
 torch = "^1.0.0"
 chromadb = "^0.3.21"
-tiktoken = "^0.3.3"
-python-dotenv = "^1.0.0"
+# tiktoken = "^0.3.3"
+python-dotenv = "^0.21.1"
 sentence-transformers = "^2"
-gptcache = "^0.1.9"
+# gptcache = "^0.1.9"
 promptlayer = "^0.1.80"
 tair = "^1.3.3"
 wikipedia = "^1"
@@ -211,8 +209,8 @@ all = [
     "tiktoken",
     "torch",
     "jinja2",
-    "pinecone-client",
-    "pinecone-text",
+    # "pinecone-client",
+    # "pinecone-text",
     "weaviate-client",
     "redis",
     "google-api-python-client",
@@ -230,14 +228,14 @@ all = [
     "pytesseract",
     "html2text",
     "atlassian-python-api",
-    "gptcache",
+    # "gptcache",
     "duckduckgo-search",
     "arxiv",
     "azure-identity",
     "clickhouse-connect",
     "azure-cosmos",
     "lancedb",
-    "langkit",
+    # "langkit",
     "lark",
     "pexpect",
     "pyvespa",
@@ -274,7 +272,7 @@ extended_testing = [
  "pandas",
  "telethon",
  "psychicapi",
- "zep-python",
+#  "zep-python",
  "gql",
  "requests_toolbelt",
  "html2text",
